# CompressTest

./: CMakeLists.txt  README.md  main.cpp  result.txt
